Fixed mobile overlapping

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
 
   border-top: 2px solid;
 }
