--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -3,6 +3,7 @@
   max-width: 1200px;
   margin: auto;
   min-height: 100vh;
+  position: relative;
 }
 
 .home-content-container {
