--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -8,6 +8,7 @@
   align-items: center; */
   display: flex;
   align-items: center;
+  position: relative;
 
   border-top: 2px solid;
 }
