--- a/src/index.css
+++ b/src/index.css
@@ -72,3 +72,8 @@ h5 {
   border: 2px solid white;
   border-radius: 20px;
 }
+
+body.modal-open {
+  overflow: hidden;
+  position: fixed;
+}
